# data_format_and_optimization

./: .gitignore  README.md  pyproject.toml
Arrow/notebooks/: Data_format_overview.ipynb
evaluation/notebooks/: data_format_overview.ipynb  data_format_overview_local.ipynb  parquet_optimization.ipynb
jobs/: run.sh  script.py
notebooks/: data_format_overview.ipynb  data_format_overview_local.ipynb  parquet_optimization.ipynb
tmp/: mystats.csv  op-stats-local.csv  size-stats.csv
