[tool.poetry]
name = "data-format-and-optimization"
version = "0.1.0"
description = ""
authors = ["Pengfei Liu <liu.pengfei@hotmail.fr>"]
readme = "README.md"
packages = [{include = "data_format_and_optimization"}]

[tool.poetry.dependencies]
python = "^3.8"
notebook = "^6.5.4"
s3fs = "^2023.4.0"
pyspark = "3.3.0"
pandas = "^2.0.1"
pyarrow = "^12.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
